webapp1-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: webapp1
  labels:
    app: webapp1
spec:
  containers:
    - name: webapp1
      image: hariramprasanth/my-nginx:v1
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp1-service
spec:
  selector:
    app: webapp1
  ports:
    - port: 80
  type: ClusterIP
---
