webapp2-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: webapp2
  labels:
    app: webapp2
spec:
  containers:
    - name: webapp2
      image: hariramprasanth/my-nginx:v2
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp2-service
spec:
  selector:
    app: webapp2
  ports:
    - port: 80
  type: ClusterIP
---
