webapps-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webapp-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.testeksdemopoc.net"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapp1-virtual-service
spec:
  hosts:
    - "webapp1.testeksdemopoc.net"
  gateways:
    - webapp-gateway
  http:
    - route:
        - destination:
            host: webapp1-service
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapp2-virtual-service
spec:
  hosts:
    - "webapp2.testeksdemopoc.net"
  gateways:
    - webapp-gateway
  http:
    - route:
        - destination:
            host: webapp2-service
---
